crates/ink/tests/ui/abi/sol/fail/message-selector-overrides.rs
#![allow(unexpected_cfgs)]

#[ink::contract]
mod contract {
    #[ink(storage)]
    pub struct Contract {}

    impl Contract {
        #[ink(constructor)]
        pub fn constructor() -> Self {
            Self {}
        }

        #[ink(message, selector = 1)]
        pub fn message(&self) {}
    }
}

fn main() {}
